# ROS-hog-detector

./: CMakeLists.txt  README.md  package.xml
launch/: body.launch  detect_body.launch
msg/: ImageBoundingBox.msg  ImageBoundingBoxListStamped.msg
src/: hog-main.cpp  main.cpp
